git subrepo pull (merge) deps/lightning
subrepo:
  subdir:   "deps/lightning"
  merged:   "8758acfb"
upstream:
  origin:   "https://git.savannah.gnu.org/git/lightning.git"
  branch:   "master"
  commit:   "b0b8eb5e"
git-subrepo:
  version:  "0.4.1"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "a04d8c2"

--- a/deps/lightning/ChangeLog
+++ b/deps/lightning/ChangeLog
@@ -1,3 +1,18 @@
+2020-23-01 Paulo Andrade <pcpa@gnu.org>
+
+	* lib/lightning.c: Add a proper fix to the condition of considering
+	a register dead at entry of a block when it modifies the register
+	!after! a branch to a target where it is live.
+	The correction is just to split blocks on branches. It uses an
+	extra label per branch, but makes following the code simpler and
+	avoid costly searches.
+
+2020-22-01 Paulo Andrade <pcpa@gnu.org>
+
+	* lib/lightning.c: Correct a special condition of a register
+	only assigned in a block, and incorrectly marked as dead before
+	a jump where the register is live.
+
 2019-10-04 Paulo Andrade <pcpa@gnu.org>
 
 	* check/lightning.c, include/lightning/jit_private.h,
